fixing *Login UI New to WeQu and Sign Up button should be aligned*

--- a/main.css
+++ b/main.css
@@ -3,8 +3,9 @@
 }
 
 .loginBody .signUp{
-	/* background-image:url(/img/assets/background.png); */
 	 margin-bottom: 20px;
+	 margin-left: 0px !important;
+	 margin-right: 0px !important;	 
 }
 
 #form{
